[project]
name = "rvrb-transform"
version = "0.1.0"
description = "Text transformation engine — a composable satellite in the reverberage ecosystem"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "Juan Manuel Daza", email = "juan@daza.ar" },
]
dependencies = [
    "openai>=2.0.0",
    "pydantic>=2.0",
    "typer>=0.12",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.0",
    "mypy>=1.0.0",
]

[project.scripts]
rvrb-transform = "rvrb_transform.cli:main"
rvrb-transform-mcp = "rvrb_transform.mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rvrb_transform"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
